results/runs/20260311_011810_onlineboutique-_head-_high-_low-_delay-_service-_service-productcatalogservice-_r1-/snapshots/config/all-virtualservices.yaml
apiVersion: v1
items:
- apiVersion: networking.istio.io/v1
  kind: VirtualService
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.istio.io/v1beta1","kind":"VirtualService","metadata":{"annotations":{},"name":"onlineboutique-vs","namespace":"ob-app"},"spec":{"gateways":["onlineboutique-gateway"],"hosts":["*"],"http":[{"match":[{"uri":{"prefix":"/"}}],"route":[{"destination":{"host":"frontend","port":{"number":80}}}]}]}}
    creationTimestamp: "2026-03-10T13:08:14Z"
    generation: 1
    name: onlineboutique-vs
    namespace: ob-app
    resourceVersion: "5888"
    uid: 9d4e2ceb-0741-4ecb-b5d2-7c9a6db979f9
  spec:
    gateways:
    - onlineboutique-gateway
    hosts:
    - '*'
    http:
    - match:
      - uri:
          prefix: /
      route:
      - destination:
          host: frontend
          port:
            number: 80
kind: List
metadata:
  resourceVersion: ""
